# toneloader

./: CMakeLists.txt  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
LICENSES/: Crate_Vintage_Club_20.CC0.txt
lv2/: manifest.ttl  toneloader.ttl  toneloader_ui.ttl
scripts/: update-fetchcontent.py
src/: library.cpp  library.hpp  plugin.cpp  toneloader-ui.map  ui.cpp
tests/: library_test.cpp
